<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y654"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/bg_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/ic_title" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x144"
                android:layout_marginStart="@dimen/x144"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y30"
                    android:layout_marginTop="@dimen/y90"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_num"
                        android:textColor="@color/tx_bottom_navigation" />

                    <EditText
                        android:id="@+id/et_login_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingStart="@dimen/x30"
                        android:singleLine="true"
                        android:textColor="@color/tx_bottom_navigation"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_fine_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y30"
                    android:layout_marginTop="@dimen/y90"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd"
                        android:textColor="@color/tx_bottom_navigation" />

                    <EditText
                        android:id="@+id/et_login_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:maxLength="11"
                        android:paddingStart="@dimen/x30"
                        android:singleLine="true"
                        android:textColor="@color/tx_bottom_navigation"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bg_fine_line" />

                <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y78"
                    android:autoLink="all"
                    android:text="@string/forget_pwd"
                    android:textColor="@color/tx_bottom_navigation"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y135"
                android:layout_marginBottom="@dimen/y30"
                android:layout_marginEnd="@dimen/x45"
                android:layout_marginStart="@dimen/x45"
                android:layout_marginTop="@dimen/y354"
                android:background="@drawable/bg_confirm_bt"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
